--- a/client/src/components/Footer/FooterElements.css
+++ b/client/src/components/Footer/FooterElements.css
@@ -4,17 +4,17 @@
 
 .footer__container {
   display: grid;
-  grid-template-columns: 30% 40% 20%;
-  justify-content: center;
-  gap: 5%;
-
+  grid-template-columns: 25% 40% 28%;
+  justify-content: space-around;
   padding: 1.5rem 0 1rem;
+  margin-top: 5rem;
 }
 
 .footer__container-1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 3rem;
 }
 
 .footer__container-1 a img {
@@ -26,6 +26,8 @@
   color: var(--color-white);
   font-weight: 300;
   font-size: 16px;
+  text-align: center;
+  margin-top: 1.2rem;
 }
 
 .footer__container-2 {
