--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,6 @@
   border: 0;
   outline: 0;
   box-sizing: border-box;
-  list-style: none;
   text-decoration: none;
 }
 
@@ -22,7 +21,7 @@
   --transition: all 400ms ease;
 
   --container-width-lg: 85%;
-  --container-width-md: 90%;
+  --container-width-md: 95%;
   --container-width-ms: 95%;
 }
 
@@ -37,7 +36,7 @@ body {
 /* =============== GENERAL STYLES ================== */
 .container {
   width: var(--container-width-lg);
-  margin: 8rem auto 0;
+  margin: 0 auto;
 }
 
 section {
