--- a/client/src/components/Form/FormElements.css
+++ b/client/src/components/Form/FormElements.css
@@ -1,5 +1,6 @@
 .form__container {
   margin-top: 10rem;
+  width: 80%;
 }
 
 .form__container-header {
@@ -73,4 +74,31 @@ form button:hover {
   cursor: pointer;
 
   transition: var(--transition);
+}
+
+@media screen and (max-width: 830px) {
+  .form__container {
+    margin-top: 5rem;
+    width: 95%;
+  }
+
+  .form__container-header {
+    font-size: 20px;
+  }
+
+  .form__details-name,
+  .form__details-dets {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .form__details-dets {
+    margin-top: 1rem;
+  }
+
+  .form__details-name input,
+  .form__details-dets input {
+    max-width: 100%;
+  }
 }
